kubernetes-policy-compliance-enforcement/reports/dryrun-violating-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"name":"dryrun-root","namespace":"dryrun-test"},"spec":{"containers":[{"command":["sh","-c","sleep 3600"],"image":"busybox:latest","name":"busybox","securityContext":{"privileged":false,"runAsUser":0}}]}}
  creationTimestamp: "2026-09-16T19:15:29Z"
  generation: 1
  name: dryrun-root
  namespace: dryrun-test
  resourceVersion: "1312"
  uid: 97139c06-56a6-4286-8b67-62cda9d48f7c
spec:
  containers:
  - command:
    - sh
    - -c
    - sleep 3600
    image: busybox:latest
    imagePullPolicy: Always
    name: busybox
    resources: {}
    securityContext:
      privileged: false
      runAsUser: 0
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-8n922
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: kubernetes-compliance-control-plane
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-8n922
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2026-09-16T19:15:30Z"
    observedGeneration: 1
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2026-09-16T19:15:29Z"
    observedGeneration: 1
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2026-09-16T19:15:30Z"
    observedGeneration: 1
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2026-09-16T19:15:30Z"
    observedGeneration: 1
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2026-09-16T19:15:29Z"
    observedGeneration: 1
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://0c101b6f3cd0fba27dc5aadc143e5b92ac6b0d44dfac4a3cf983a94b8d95c84d
    image: docker.io/library/busybox:latest
    imageID: docker.io/library/busybox@sha256:dc2d74b28e4cf8984fa52af1f39bc7c3d9c73760b41a74d629f5d11b1ab28616
    lastState: {}
    name: busybox
    ready: true
    resources: {}
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2026-09-16T19:15:30Z"
    user:
      linux:
        gid: 0
        supplementalGroups:
        - 0
        - 10
        uid: 0
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-8n922
      readOnly: true
      recursiveReadOnly: Disabled
  hostIP: 172.18.0.2
  hostIPs:
  - ip: 172.18.0.2
  observedGeneration: 1
  phase: Running
  podIP: 10.244.0.15
  podIPs:
  - ip: 10.244.0.15
  qosClass: BestEffort
  resources: {}
  startTime: "2026-09-16T19:15:29Z"
